--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,32 @@
+body {
+  background-color: #333;
+}
+
 #header {
   position: fixed;
-  background: #fff;
+  background: #333;
   width: 100%;
   z-index: 10;
 }
 
 #title, #desc {
-  background: #fff;
+  color: #fff;
+  background: #333;
   margin-left: -30px;
 }
 
 #PlayerInfo {
   position: fixed;
   margin-top: 130px;
-  background: #fff;
+  background: #333;
+  color: #fff;
   z-index: 10;
 }
 #PlayerInfo p {
   width: 150px;
 }
 #PlayerInfo button {
+  color: #000;
   width: 200px;
 }
 
